@@ -1,0 +1,7 @@
+# Generated by using Rcpp::compileAttributes() -> do not edit by hand
+# Generator token: 10BE3573-1514-4C36-9D1C-5A225CD40393
+
+AdaptiveKernel <- function(x0, x, h) {
+    .Call('car_AdaptiveKernel', PACKAGE = 'car', x0, x, h)
+}
+
