@@ -8,6 +8,8 @@ Changes to Version 2.1-4
   
   o Added list, data.frame, and matrix methods for Boxplot(), suggestion of Michael Friendly
   
+  o Added adaptiveKernel() density estimator, with option to use it in densityPlot().
+  
 Changes to Version 2.1-3
 
   o Corrected documentation for mcPlots
